syntax = "proto3";

option go_package = "github.com/utmstack/UTMStack/log-auth-proxy/agent";

package agent;

import "common.proto";

service AgentService {
  rpc ListAgents (ListRequest) returns (ListAgentsResponse) {}
}

message Agent {
  string ip = 1;
  string hostname = 2;
  string os = 3;
  Status status = 4;
  string platform = 5;
  string version = 6;
  string agent_key = 7;
  uint32 id = 8;
  string last_seen = 9;
  string mac = 10 ;
  string os_major_version = 11;
  string os_minor_version = 12;
  string aliases = 13;
  string addresses = 14;
}

message ListAgentsResponse {
  repeated Agent rows = 1;
  int32 total = 2;
}
